# dude

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: windows.yml  workflow.yml
cmake/: ClangTidy.cmake  Coverage.cmake  PedanticCompiler.cmake  Sanitizers.cmake  StaticLinking.cmake  Version.cmake
docs/: algorithm.md
src/cli/: CMakeLists.txt  GitDiffParser.cpp  GitDiffParser.hpp  GitFileFilter.cpp  GitFileFilter.hpp  main.cpp
src/codedup/: AnalysisScope.cpp  AnalysisScope.hpp  Api.hpp  CMakeLists.txt  CloneDetector.cpp  CloneDetector.hpp  CodeBlock.cpp  CodeBlock.hpp  ConsoleReporter.cpp  ConsoleReporter.hpp  DiffFilter.cpp  DiffFilter.hpp  DiffRange.hpp  Encoding.cpp  Encoding.hpp  FileScanner.cpp  FileScanner.hpp  GlobMatch.hpp  HelpFormatter.cpp  HelpFormatter.hpp  IntraFunctionDetector.cpp  IntraFunctionDetector.hpp  JsonReporter.cpp  JsonReporter.hpp  Language.hpp  LanguageRegistry.cpp  LanguageRegistry.hpp  MappedFile.hpp  ProgressBar.cpp  ProgressBar.hpp  ProgressCallback.hpp  Reporter.cpp  Reporter.hpp  ReporterFactory.cpp  ReporterFactory.hpp  RollingHash.hpp  ScopeFilter.cpp  ScopeFilter.hpp  SimdCharClassifier.hpp  SourceLocation.hpp  (+7 more)
src/codedup/Languages/: CSharpLanguage.cpp  CSharpLanguage.hpp  CppLanguage.cpp  CppLanguage.hpp  PythonLanguage.cpp  PythonLanguage.hpp
src/dude/: AnalysisScope.cpp  AnalysisScope.hpp  Api.hpp  CMakeLists.txt  CloneDetector.cpp  CloneDetector.hpp  CodeBlock.hpp  ConsoleReporter.cpp  ConsoleReporter.hpp  DiffFilter.cpp  DiffFilter.hpp  DiffRange.hpp  Encoding.cpp  Encoding.hpp  FileScanner.cpp  FileScanner.hpp  GlobMatch.hpp  HelpFormatter.cpp  HelpFormatter.hpp  IntraFunctionDetector.cpp  IntraFunctionDetector.hpp  JsonReporter.cpp  JsonReporter.hpp  Language.hpp  LanguageRegistry.cpp  LanguageRegistry.hpp  MappedFile.hpp  ProgressBar.cpp  ProgressBar.hpp  ProgressCallback.hpp  Reporter.hpp  ReporterFactory.cpp  ReporterFactory.hpp  RollingHash.hpp  ScopeFilter.cpp  ScopeFilter.hpp  SimdCharClassifier.hpp  SourceLocation.hpp  SyntaxHighlighter.hpp  Token.cpp  (+3 more)
src/dude/Languages/: CSharpLanguage.cpp  CSharpLanguage.hpp  CppLanguage.cpp  CppLanguage.hpp  PythonLanguage.cpp  PythonLanguage.hpp
src/git/: CMakeLists.txt  GitDiffParser.cpp  GitDiffParser.hpp  GitFileFilter.cpp  GitFileFilter.hpp
src/mcp/: AnalysisSession.cpp  AnalysisSession.hpp  CMakeLists.txt  McpTooling.cpp  McpTooling.hpp
src/mcpprotocol/: CMakeLists.txt  JsonRpc.cpp  JsonRpc.hpp  McpProtocol.cpp  McpProtocol.hpp  McpServer.cpp  McpServer.hpp
src/tests/: AnalysisScopeTest.cpp  CMakeLists.txt  CSharpCodeBlockTest.cpp  CSharpTokenizerTest.cpp  CloneDetectorTest.cpp  CodeBlockTest.cpp  DiffFilterTest.cpp  DiffRangeTest.cpp  EncodingTest.cpp  FileScannerTest.cpp  GitDiffParserTest.cpp  GitFileFilterTest.cpp  GlobMatchTest.cpp  HelpFormatterTest.cpp  IntegrationTest.cpp  IntraFunctionDetectorTest.cpp  JsonReporterTest.cpp  LanguageRegistryTest.cpp  MappedFileTest.cpp  McpAnalysisSessionTest.cpp  McpJsonRpcTest.cpp  McpProtocolTest.cpp  McpServerTest.cpp  McpToolsTest.cpp  ProgressBarTest.cpp  PythonCodeBlockTest.cpp  PythonTokenizerTest.cpp  ReporterFactoryTest.cpp  ReporterTest.cpp  ScopeFilterTest.cpp  SyntaxHighlighterTest.cpp  TokenNormalizerTest.cpp  TokenTest.cpp  TokenizerTest.cpp
